[package]
name = "puffin-test-app"
description = "This is an application to test various usage of puffin (with puffin_http and external viewer)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
puffin = "0.13"
puffin_http = "0.10"
