[package]
name = "puffin-test-app"
description = "This is an application to test various usage of puffin (with puffin_http and external viewer)"
version = "0.1.0"
edition = "2021"
authors = ["Gwen Lg <me@gwenlg.fr>"]
repository = "https://github.com/gwen-lg/puffin-test-app"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "wrap_help"] }
log = "0.4"
rand = "0.8"
puffin = "0.19"
puffin_http = "0.16"
simplelog = "0.12"
